# educational-projects

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: depth-camera-piano.md  voice-tuner.md
docs/handouts/: depth-camera-piano-handout.md
scripts/: calculate_footprint.py  cloud_data.py  generate_test_data.py  make_note_to_distance_table.py  orchestrate_song_and_play.py  record_test_data.py
src/: __init__.py
src/config/: camera_config.py
src/detectors/: angular_detector.py  bounding_box_detector.py
src/io/: __init__.py  camera_models.py  frames.py
src/piano/: __init__.py  channel.py  config.yaml  config_loader.py  key.py  main.py  notes.py  songs.py  tone_generator.py  voices.py
src/testing/: frame_utils.py
src/tuner/: camera.py  main.py  main_args.py  microphone.py
tests/: conftest.py  test_audio.py  test_bounding_box_detector.py  test_channels.py
