[project]
name = "realsense-projects"
version = "0.1.0"
description = "A collection of RealSense Projects"
requires-python = ">=3.8"
dependencies = [
    "pyrealsense2>=2.54.2",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pyaudio>=0.2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "manual: tests that require human verification"
]